# tiny-world-model

./: .gitignore  README.md  pyproject.toml
src/diffusion/: generate.py  model.py  noise.py  train.py  vocab.py
src/env/: cartpole.py  collect.py  collect_minigrid.py  minigrid.py  replay_buffer.py  visualize.py
src/eval/: latent_viz.py  metrics.py  planner.py  visualize_plan.py
src/models/: cnn_encoder.py  decoder.py  encoder.py  minigrid_world_model.py  transition.py  world_model.py
src/training/: dataset.py  reward_head.py  reward_trainer.py  trainer.py
tests/: test_diffusion.py  test_env.py  test_eval.py  test_minigrid.py  test_models.py  test_planning.py  test_training.py
