[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-world-model"
version = "0.1.0"
description = "A minimal world model trained on Gymnasium environments"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "gymnasium[classic-control]>=0.29.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "tensorboard>=2.16.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
